
Version vNext
	General description:

	Code Changes:
		-[Extensions] New DecoratorExtensions class added. This class replaces GenericDecoratorExtensions
		 and allows registering both generic and non-generic decorators and enables decorating collections
		 that are returned using GetAllInstances or are injected using IEnumerable<T> constructor arguments.

	Bug fixes:


Version 1.4.1.12065 (v1.4.1 RTM) 2012-03-05
	General description:
		RegisterOpenGenericDecorator extension methods improved to allow registering non-generic deceorator.

	Code Changes:
		-[Extensions] GetTypesToRegister methods added to the OpenGenericBatchRegistrationExtensions class
		 which allows to customize the behavior.
		-[Extensions] RegisterOpenGenericDecorator extension methods now allow registering non-generic
		 implementations, as long as they implement the supplied open generic service type.

	Bug fixes:


Version 1.4.0.12049 (v1.4.0 RTM) 2012-02-18
	General description:
		Container.GetInitializer<T> method added to the core library, and RegisterManyForOpenGeneric in
		extensions now execute initalizers on decorators.

	Code Changes:
		-[Core] The internal Container.GetInitializerFor<T> method has been made public and renamed to
		 GetInitializer<T>. This enables certain specialized scenarios. The main (external) consumer of
		 this method is the RegisterManyForOpenGeneric method of the Extensions project.
		-[Extensions] Decorators created using the RegisterManyForOpenGeneric extension methods now get
		 initialized with any registered initializers (if any).

	Bug fixes:
		-[Core] The exception message that was thrown in case the delegate of a type could not be compiled, 
		 incorrectly described the UnregisteredTypeEventArgs.Register method, which was confusing.


Version 1.3.1.11358 (v1.3.1 RTM) 2011-12-23
	General description:
		RegisterOpenGenericDecorator extension methods added to the SimpleInjector.Extensions project.

	Code Changes: